tests/unit/parser/domains/invalid/repeated-requirements.pddl
; `:typing` is defined multiple times in requirements section (3:10)
(define (domain repeated-requirements)
        (:requirements :typing :typing))